# football-wire

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  THANKS.md  fbw  fbw-capture  fbw-daemon  fbw-query  fbw-watch  fbw.config.local.example.toml  fbw.config.toml  pyproject.toml
data/static/: invariants.md  pitch.toml  venues.csv
data/static/preamble/: data-notes.md  football-notes.md  tournament.md
data/static/strings/: de-at.yaml  en.yaml
data/static/teams/: ALB.md  ALG.md  ARG.md  AUS.md  AUT.md  BEL.md  BIH.md  BRA.md  CAN.md  CHN.md  CIV.md  CMR.md  COD.md  COL.md  CRO.md  CZE.md  DEN.md  ECU.md  ENG.md  ESP.md  FRA.md  GER.md  GHA.md  HTI.md  IND.md  IRQ.md  ITA.md  JOR.md  JPN.md  KOR.md  MAR.md  MEX.md  NED.md  NGA.md  NOR.md  PAN.md  PER.md  POR.md  QAT.md  RSA.md  (+8 more)
docs/: api-fifa.md  coordinates.md  espn-endpoint.md  usage-human.md  usage-lm.md
fixtures/: duplicate_goal_a.json  duplicate_goal_b.json  late_arrival_red_33.json  late_arrival_var_34.json  match_can_qat.json  match_mex_kor.json  score_inconsistency_66.json  sub_correct_son.json  sub_inverted_romo.json  team_misattribution_pedro.json  yellow_card_anonymous_staff.json  yellow_card_head_coach.json
src/fbw/: __init__.py  __main__.py  adapters.py  cli.py  config.py  daemon.py  display.py  espn.py  feed.py  feed_sm.py  fetch.py  football.py  format.py  ingest.py  model.py  process.py  query.py  state.py  strings.py  tournament.py  watch.py
tests/: calibrate_gate.py  gate_calibration.md  test_football.py  test_process.py  test_state.py  test_zone.py
(+78 files in other folders)
